# strategy-lab

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_MEMORY.md  FINNHUB_DIAGNOSTICS_GUIDE.md  FINNHUB_OPTIMIZATION_SUMMARY.md  INTEGRATION_TEST_ISSUES.md  LICENSE  ORB_FEATURE_IMPLEMENTATION.md  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION_SUMMARY.md  POLYGON_INTEGRATION_COMPLETE.md  README.md  TIMEZONE_FIX_SUMMARY.md  debug_realtime_bars.py  pytest.ini  run_test.ps1  test_bar_flush_if_elapsed.py  test_e2e_paper_trading.py  test_finnhub_bar_accuracy.py  test_finnhub_stability.py  test_finnhub_ws.py  test_orchestrator_daily_cycle.py  test_reconnection_ping_bug.py  test_timezone_fix.py  test_warmup_fix.py  test_warmup_market_open.py  test_warmup_phase.py  test_yfinance_data.py  validate_polygon_integration.py
config/: dev.yaml  (+2 more)
vibe/trading_bot/: .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  version.py
vibe/trading_bot/api/: __init__.py  health.py
vibe/trading_bot/config/: __init__.py  constants.py  logging_config.py  settings.py
vibe/trading_bot/core/: __init__.py  health_monitor.py  orchestrator.py  scheduler.py  service.py
vibe/trading_bot/dashboard/: README.md  __init__.py  api.py  app.py  charts.py  websocket_server.py
vibe/trading_bot/data/: README.md  __init__.py  aggregator.py  cache.py  manager.py
vibe/trading_bot/exchange/: __init__.py  mock_exchange.py  slippage.py
vibe/trading_bot/execution/: __init__.py  order_manager.py  trade_executor.py
(+379 files in other folders)
